--- a/_include/head.html
+++ b/_include/head.html
@@ -3,5 +3,5 @@
   href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
   rel="stylesheet" crossorigin="anonymous"
   integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN">
-  <link rel="shortcut icon" type="image/x-icon" href="/images/image.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="{{site.url}}/images/image.ico">
 </head>
